image overlap fixed

--- a/css/_abstract.css
+++ b/css/_abstract.css
@@ -18,7 +18,7 @@
         height: 100%;
         /* width: fit-content; */
         top: 0;
-        left: 4px;
+        left: 0px;
         opacity: 1;
     }
 
@@ -53,6 +53,8 @@
         /* top: 30px; */
         left: 0px;
         top: 0px;
+        width: 90%;
+        animation: fade 20s linear infinite;
 
     }
 
@@ -64,6 +66,7 @@
         top: 0px;
         left: 0px;
         opacity: 0;
+        width:90%;
         animation: fade 20s linear infinite;
     }
 }
